--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/movie_maven-favicon-color (1).svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Movie_Maven | Welcome to movie maven home of hollywood</title>
   </head>
   <body>
     <div id="root"></div>
