--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/movie_maven-favicon-color (1).svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie_Maven | Your Ultimate Source for Movies, Series, Anime, Kdrama and Reviews</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/movie_maven-favicon-color (1).svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Movie_Maven | Your Ultimate Source for Movies, Series, Anime, Kdrama and Reviews</title>
+
+  <!-- Open Graph (og) meta tags -->
+  <meta property="og:title" content="Movie_Maven | Your Ultimate Source for Movies, Series, Anime, Kdrama and Reviews" />
+  <meta property="og:description" content="Explore a variety of movies, series, and reviews on MovieMaven. Your go-to source for all things entertainment." />
+  <meta property="og:image" content="https://www.moviemaven.xyz/moviemaven.webp" /> 
+  <meta property="og:url" content="https://www.moviemaven.xyz" />
+  <meta property="og:type" content="website" /> <!-- Adjust if your content type is different -->
+
+  <!-- Canonical URL meta tag -->
+  <link rel="canonical" href="https://www.moviemaven.xyz" /> <!-- Replace with the canonical URL of your page -->
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
