--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/movie_maven-favicon-color (1).svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Movie_Maven | Your Ultimate Source for Movies, Series, Anime, Kdrama and Reviews</title>
+  <title>MovieMaven - Your Ultimate Source for Movies, Series, Anime, Kdrama and Reviews</title>
 
   <!-- Open Graph (og) meta tags -->
-  <meta property="og:title" content="Movie_Maven | Your Ultimate Source for Movies, Series, Anime, Kdrama and Reviews" />
+  <meta property="og:title" content="MovieMaven - Your Ultimate Source for Movies, Series, Anime, Kdrama and Reviews" />
   <meta property="og:description" content="Explore a variety of movies, series, and reviews on MovieMaven. Your go-to source for all things entertainment." />
   <meta property="og:image" content="https://www.moviemaven.xyz/moviemaven.webp" /> 
   <meta property="og:url" content="https://www.moviemaven.xyz" />
