--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,28 @@
   <meta property="og:url" content="https://www.moviemaven.xyz" />
   <meta property="og:type" content="website" /> <!-- Adjust if your content type is different -->
 
+  <meta name="google-adsense-account" content="ca-pub-1263396093645014">
+
   <!-- Canonical URL meta tag -->
-  <link rel="canonical" href="https://www.moviemaven.xyz" /> <!-- Replace with the canonical URL of your page -->
+  <link rel="canonical" href="https://www.moviemaven.xyz" /> 
+  
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Movie",
+      "name": "Movie Maven",
+      "description": "Explore an extensive selection of entertainment options like movies, TV series, kdramas and animes. Also find insightful movie reviews that shed light on the world of cinema. Immerse yourself in a world where staying updated with current events is effortless while indulging in engaging content that's impossible to ignore - all handpicked for you at one destination. Brace yourself for unforgettable immersive experiences! ",
+      "image": "https://www.moviemaven.xyz/moviemaven.webp",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.5",
+        "reviewCount": "100"
+      }
+    }
+  </script>
+<!-- Replace with the canonical URL of your page -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1263396093645014"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="root"></div>
