--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
   <meta property="og:url" content="https://www.moviemaven.xyz" />
   <meta property="og:type" content="website" /> <!-- Adjust if your content type is different -->
 
-  <meta name="google-adsense-account" content="ca-pub-1263396093645014">
+  <!-- <meta name="google-adsense-account" content="ca-pub-1263396093645014"> -->
 
   <!-- Canonical URL meta tag -->
   <link rel="canonical" href="https://www.moviemaven.xyz" /> 
