add sw.js and update index.html

--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,7 @@
   <meta property="og:description" content="Explore a variety of movies, series, and reviews on MovieMaven. Your go-to source for all things entertainment." />
   <meta property="og:image" content="https://www.moviemaven.xyz/moviemaven.webp" /> 
   <meta property="og:url" content="https://www.moviemaven.xyz" />
-  <meta property="og:type" content="website" /> <!-- Adjust if your content type is different -->
-
+  <meta property="og:type" content="website" /> 
   <meta name="google-adsense-account" content="ca-pub-1263396093645014">
 
   <!-- Canonical URL meta tag -->
