--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,8 @@
 <!-- Replace with the canonical URL of your page -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1263396093645014"
      crossorigin="anonymous"></script>
+
+     <script src="https://alwingulla.com/88/tag.min.js" data-zone="39045" async data-cfasync="false"></script>
 </head>
 <body>
   <div id="root"></div>
