--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/movie_maven-favicon-color (1).svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="ahrefs-site-verification" content="f231b8d94b951127e77076252fb9f50a49a8e435ecafc17736a33c7b14bd5166">
+  
   <title>MovieMaven - Your Ultimate Source for Movies, Series, Anime, Kdrama and Reviews</title>
 
   <!-- Open Graph (og) meta tags -->
