--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
 <!-- Replace with the canonical URL of your page -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8414334205797074"
      crossorigin="anonymous"></script>
-
+     <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://arvigorothan.com/tag.min.js',7066328,document.body||document.documentElement)</script>
      <script src="https://alwingulla.com/88/tag.min.js" data-zone="39045" async data-cfasync="false"></script>
 </head>
 <body>
