--- a/client/index.html
+++ b/client/index.html
@@ -31,8 +31,8 @@
       }
     }
   </script>
-      <script>(function(d,z,s){s.src='https://'+d+'/401/'+z;try{(document.body||document.documentElement).appendChild(s)}catch(e){}})('goomaphy.com',7111157,document.createElement('script'))</script>
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://arvigorothan.com/tag.min.js',7120478,document.body||document.documentElement)</script>
+<script src="https://chezoams.com/pfe/current/tag.min.js?z=7162578" data-cfasync="false" async></script>
 </head>
 <body>
   <div id="root"></div>
