--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,7 @@
     }
   </script>
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://arvigorothan.com/tag.min.js',7120478,document.body||document.documentElement)</script>
-<script src="https://rauvoaty.net/pfe/current/tag.min.js?z=7162578" data-cfasync="false" async></script>
+<script src="https://asleavannychan.com/pfe/current/tag.min.js?z=7162578" data-cfasync="false" async></script>
 </head>
 <body>
   <div id="root"></div>
