--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,12 @@
   <title>MovieMaven - Your Ultimate Source for Movies, Series, Anime, Kdrama and Reviews</title>
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://arvigorothan.com/tag.min.js',7120478,document.body||document.documentElement)</script>
 <script src="https://boltepse.com/pfe/current/tag.min.js?z=7162578" data-cfasync="false" async></script>
+<script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="moviemaven1_bot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+<script type="text/javascript">
+  function onTelegramAuth(user) {
+    alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');
+  }
+</script>
 </head>
 <body>
   <div id="root"></div>
